# insider-threat-ttp-kb

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SETUP_NEW_REPO.md  TTMs.csv  design-principles-and-methodology.docx  insider-threat-heatmap.xlsx  insider-threat-ttp-kb.csv  insider-threat-ttp-kb.json  insider-threat-ttp-kb.xlsx  mappings.py  pyproject.toml
.github/workflows/: delete-web-preview.yml  sphinx.yml
docs/: acknowledgements.rst  analysis.rst  center-projects.rst  centerprojects.rst  conf.py  contribute.rst  definitions.rst  future-work.rst  futurework.rst  green_seen.rst  heatmap.rst  how_to_use_knowledgebase.rst  identifying-threats.rst  index.rst  insider-threat-ttp-kb.csv  introduction.rst  knowledgebase.rst  mitigationsanddatasources.rst  mitigationsanddetections.rst  ohi.rst  overview.rst  portal-guide.rst  portalguide.rst
docs/_static/: ctid_logo_white.xcf
docs/_static/css/: ctid.css  custom.css  insider.css  jquery.dataTables.min.css
docs/_static/html/: datasources-1.html  mitigations-1.html  mitigationsanddatasources-1.html  test-1.html
docs/_templates/: breadcrumbs.html
docs/extra/: datasources.csv  exfil_heat.json  fraud_heat.json  green_seen_v1_v2.json  green_seen_v1_v2.xlsx  heatmap_InT_2.09.json  insider-threat-heatmap.json  insider-threat-ttp-knowledgebase.json  insider_threat_matrix_combined.json  insider_threat_matrix_v1.json  mitigations.csv
docs/scripts/: sankey.py  sankey_func.py  test_func.py
make/: sphinx.mk
scripts/: datasources.csv  insider-threat-ttp-kb.csv  mappings.py  mitigations.csv  output.csv  sankey.py
(+8 files in other folders)
